5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1756_672.log
== TEST (2019-05-21 15:50:41) 
-- CODE:
from numpy import *
n=array(eval(input("n: ")
v=ones(n, dtype=int)
print(v)
-- ERROR:
File "XXXX", line 3
    v=ones(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:56:47) 
-- CODE:
from numpy import *
n=array(eval(input("n: ")
v=ones()(n, dtype=int)
print(v)
-- ERROR:
File "XXXX", line 3
    v=ones()(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:13:10) 
-- CODE:
from numpy import *
n=int(input("n: ")
v=ones()(n, dtype=int)
print(v)
-- ERROR:
File "XXXX", line 3
    v=ones()(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:13:21) 
-- CODE:
from numpy import *
n=int(input("n: ")
v=ones(n, dtype=int)
print(v)
-- ERROR:
File "XXXX", line 3
    v=ones(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:13:51) 
-- CODE:
from numpy import *
n = int(input("n: ")
v = ones(n, dtype = int)
print(v)
-- ERROR:
File "XXXX", line 3
    v = ones(n, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:13:53) 
-- CODE:
from numpy import *
n = int(input("n: ")
v = ones(n, dtype = int)
print(v)
-- ERROR:
File "XXXX", line 3
    v = ones(n, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:13:54) 
-- CODE:
from numpy import *
n = int(input("n: ")
v = ones(n, dtype = int)
print(v)
-- ERROR:
File "XXXX", line 3
    v = ones(n, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:14:40) 
-- CODE:
from numpy import *
n = int(input("n: ")
v = ones(n , dtype = int)
print(v)
-- ERROR:
File "XXXX", line 3
    v = ones(n , dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:14:49) 
-- CODE:

n = int(input("n: ")
v = ones(n , dtype = int)
print(v)
-- ERROR:
File "XXXX", line 3
    v = ones(n , dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:15:00) 
-- CODE:
from numpy import *
n = int(input("n: ")
v = ones (n , dtype = int)
print(v)
-- ERROR:
File "XXXX", line 3
    v = ones (n , dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:15:21) 
-- CODE:
from numpy import *
n = int(input("n: ")
v = ones (n , dtype=int)
print(v)
-- ERROR:
File "XXXX", line 3
    v = ones (n , dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:15:27) 
-- CODE:
from numpy import *
n = int(input("n: ")
v = ones (n,dtype=int)
print(v)
-- ERROR:
File "XXXX", line 3
    v = ones (n,dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:15:38) 
-- CODE:
from numpy import *
n = int(input("n: ")
v = ones (n dtype=int)
print(v)
-- ERROR:
File "XXXX", line 3
    v = ones (n dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:15:54) 
-- CODE:
from numpy import *
n = int(input("n: ")
		  
v = ones(n, dtype=int)
		  
print(v)
-- ERROR:
File "XXXX", line 4
    v = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:18:22) 
-- CODE:
from numpy import *
n = int(input("n: ")
		  
v = ones(n, dtype = int)
		  
print(v)
-- ERROR:
File "XXXX", line 4
    v = ones(n, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:18:22) 
-- CODE:
from numpy import *
n = int(input("n: ")
		  
v = ones(n, dtype = int)
		  
print(v)
-- ERROR:
File "XXXX", line 4
    v = ones(n, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:18:23) 
-- CODE:
from numpy import *
n = int(input("n: ")
		  
v = ones(n, dtype = int)
		  
print(v)
-- ERROR:
File "XXXX", line 4
    v = ones(n, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:18:23) 
-- CODE:
from numpy import *
n = int(input("n: ")
		  
v = ones(n, dtype = int)
		  
print(v)
-- ERROR:
File "XXXX", line 4
    v = ones(n, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:18:38) 
-- CODE:
from numpy import *
n = int(input("n: "))
		  
v = ones(n, dtype = int)
		  
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:18:46) 
-- CODE:
from numpy import *
n = int(input("n: "))
		  
v = ones(n, dtype = int)
		  
print(v)
-- EXECUTION TIME:
0.566218
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
